--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebGL_Builds.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGL_Builds.data.br",
-        frameworkUrl: buildUrl + "/WebGL_Builds.framework.js.br",
-        codeUrl: buildUrl + "/WebGL_Builds.wasm.br",
+        dataUrl: buildUrl + "/WebGL_Builds.data",
+        frameworkUrl: buildUrl + "/WebGL_Builds.framework.js",
+        codeUrl: buildUrl + "/WebGL_Builds.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "MetalitixExample",
